--- a/app/src/main/res/layout/frame_menu_inicial.xml
+++ b/app/src/main/res/layout/frame_menu_inicial.xml
@@ -197,6 +197,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/txv_data"
                 android:paddingLeft="16dp"
+                android:padding="12dp"
                 android:textSize="14sp"
                 android:layout_alignBaseline="@+id/txtCalendario"
                 android:layout_alignBottom="@+id/txtCalendario"
